# rust_course

homework_10/client/src/: client_error.rs  main.rs
homework_10/server/: Cargo.toml
homework_10/server/configuration/: base.yaml
homework_10/server/src/: api.rs  configuration.rs  db.rs  lib.rs  main.rs  message.rs  server_error.rs  startup.rs  user.rs
homework_10/shared/: Cargo.toml
homework_10/shared/src/: message.rs
homework_10/web-client/: package-lock.json
homework_10/web-client/src/: app.html
homework_10/web-client/src/routes/: +layout.svelte  +page.svelte
homework_11/: README.md  docker-compose.yml  prometheus.yml
homework_11/client/src/: args.rs  client.rs  main.rs  utils.rs
homework_11/server/: .env  Cargo.toml
homework_11/server/configuration/: base.yaml  local.yaml
homework_11/server/migrations/: 20231203103143_create_messages_table.sql
homework_11/server/scripts/: init_db.sh
homework_11/server/src/: api.rs  configuration.rs  lib.rs  main.rs  message_info.rs  metrics.rs  server_error.rs  startup.rs  user.rs
homework_11/shared/src/: tracing.rs
homework_11/web-client/: package.json
homework_11/web-client/src/routes/: +page.svelte
homework_3/: Cargo.toml
homework_3/src/: lib.rs  main.rs  operation.rs
homework_3/tests/: lib.rs
homework_4/: Cargo.toml
homework_4/data/: input1.csv  input2.csv  invalid.csv
homework_4/src/: lib.rs  main.rs  operation.rs  program_type.rs
homework_5/client/: Cargo.toml
homework_5/client/src/: main.rs
homework_5/server/src/: main.rs
homework_5/shared/: Cargo.toml
homework_5/shared/src/: message_type.rs
homework_6/: .gitignore  Cargo.toml  README.md  log.txt
homework_6/client/: Cargo.toml
homework_6/client/src/: args.rs  client.rs  command.rs  main.rs  utils.rs
homework_6/server/: Cargo.toml
homework_6/server/src/: args.rs  main.rs
homework_6/shared/: Cargo.toml
homework_6/shared/src/: lib.rs  message.rs  message_type.rs  tracing.rs
homework_7/client/: Cargo.toml
homework_7/client/src/: client.rs  client_error.rs  command.rs  encryption.rs  main.rs  utils.rs
homework_7/server/src/: args.rs  main.rs  server_error.rs
homework_7/shared/: Cargo.toml
homework_7/shared/src/: errors.rs  message.rs  tracing.rs
homework_8/: .gitignore  README.md
homework_8/client/: Cargo.toml
homework_8/client/src/: args.rs  client.rs  client_error.rs  command.rs  encryption.rs  main.rs  utils.rs
homework_8/server/: Cargo.toml
homework_8/server/src/: main.rs  server_error.rs
homework_8/shared/: Cargo.toml
homework_8/shared/src/: errors.rs  lib.rs  message.rs
homework_9/client/: Cargo.toml
homework_9/client/src/: main.rs
homework_9/server/configuration/: base.yaml
homework_9/server/migrations/: 20231203103143_create_messages_table.sql
homework_9/server/src/: lib.rs  main.rs  user.rs
lesson_2/: Cargo.toml
lesson_2/src/: main.rs
src/: main.rs
