[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.5"
actix-web = "4.4.0"
anyhow = "1.0.75"
async-trait = "0.1.74"
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
config = "0.13.4"
flume = { version = "0.11.0", features = ["async"] }
futures = "0.3.29"
prometheus = "0.13.3"
rand = "0.8.5"
ring = "0.17.6"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.193"
serde-aux = "4.2.0"
serde_json = "1.0.108"
shared = { path = "../shared" }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-log = "0.2.0"
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
