[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
shared = { path = "../shared" }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
