[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = { version = "4.4.7", features = ["derive"] }
config = "0.13.4"
flume = "0.11.0"
futures = "0.3.29"
ring = "0.17.6"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = "1.0.193"
serde-aux = "4.2.0"
shared = { path = "../shared" }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-log = "0.2.0"
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.7"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
